# solo-mise

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL_FOR_AGENTS.md  MANIFEST.in  MEMORY.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  TOOLS.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  ingester-misclassified.yml  profile-init-fails.yml
.github/workflows/: ci.yml  publish.yml
docs/: backup-health.md  chat-surfaces.md  code-review.md  command-inventory.md  context-packs.md  handoff-promotion.md  import-schema.md  memory-care.md  operator-center.md  phase-115-164-plan.md  phase-166-200-plan.md  phase-226-250-plan.md  phase-61-100-plan.md  phase-execution-ledger.md  project-learning.md  release-candidates.md  release-readiness.md  repo-fleet.md  roadmap-completion-plan.md  scanner-registry.md  security.md  tool-catalog.md  work-closeout.md
docs/plans/: 2026-05-16-v0.3.0-harness-selection.md
docs/specs/: 2026-05-16-v0.3.0-harness-selection-design.md
memory/cards/: memory-architecture.md  multi-workspace-handoff-admin.md  obsidian-notes.md  tokenjuice-output-compaction.md
skills/note/: SKILL.md
src/brigade/: __init__.py  __main__.py  aboyeur.py  add.py  agents.py  center_cmd.py  chat_cmd.py  cli.py  config.py  context_cmd.py  daily_cmd.py  doctor.py  dogfood_cmd.py  fragments.py  handoff.py  handoff_cmd.py  ingest.py  install.py  learn_cmd.py  managed.py  memory_cmd.py  phases_cmd.py  proc.py  projects_cmd.py  prompt.py  reconfigure.py  registry.py  release_cmd.py  repos_cmd.py  roadmap_cmd.py  roster.py  roster_cmd.py  runs_cmd.py  scrub.py  security_cmd.py  station.py  status.py  templates.py  tools_cmd.py  work_cmd.py
src/brigade/templates/codex/memory-handoffs/: TEMPLATE.md
src/brigade/templates/depth/: repo.json  workspace.json
src/brigade/templates/generic/: harness-adapter-checklist.md  memory-contract.md
src/brigade/templates/handoff/: handoff-sources.example.json
src/brigade/templates/harnesses/: codex.json  hermes.json  openclaw.json
src/brigade/templates/hermes/: README.md  memory-handoff.harness.json  model-lanes.harness.json  workspace.harness.json
src/brigade/templates/hooks/: pre-push
src/brigade/templates/includes/: publisher.json
src/brigade/templates/memory/: chat-memory-sweep.example.json  memory-care.example.json
src/brigade/templates/openclaw/: README.md  acp-escalation.openclaw.json  memory-sweep-cron.openclaw.json  model-aliases.openclaw.json  ollama-memory-search.openclaw.json
src/brigade/templates/policies/: public-content.json  public-repo.json
src/brigade/templates/scripts/: backup-restic.sh
src/brigade/templates/workspace/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  INSTALL_FOR_AGENTS.md  MEMORY.md  SAFETY_RULES.md  SOUL.md  TOOLS.md  USER.md
src/solo_mise/: __init__.py  cli.py  config.py  doctor.py  ingest.py  init.py  install.py  prompt.py  reconfigure.py  selection.py  templates.py
src/solo_mise/templates/depth/: repo.json
src/solo_mise/templates/harnesses/: claude.json  hermes.json  openclaw.json
src/solo_mise/templates/profiles/: publisher.json  workspace.json
src/solo_mise/templates/workspace/: CLAUDE.md  INSTALL_FOR_AGENTS.md  MEMORY.md  TOOLS.md
templates/: README.md
tests/: conftest.py  test_aboyeur.py  test_add.py  test_agents.py  test_cli_alias.py  test_config.py  test_doctor.py  test_dogfood_cmd.py  test_fragments.py  test_gitignore.py  test_handoff.py  test_handoff_cmd.py  test_ingest.py  test_init.py  test_install.py  test_managed.py  test_memory_cmd.py  test_neutrality.py  test_phase101_cmd.py  test_phase165_cmd.py  test_phase36_cmd.py  test_phase37_cmd.py  test_phase39_cmd.py  test_phase40_cmd.py  test_phase42_cmd.py  test_phase43_cmd.py  test_phase45_cmd.py  test_phase56_60_cmd.py  test_phase96_cmd.py  test_phase97_cmd.py  test_privacy_regression.py  test_proc.py  test_prompt.py  test_reconfigure.py  test_registry.py  test_release_cmd.py  test_repos_cmd.py  test_roadmap_cmd.py  test_roster.py  test_roster_cmd.py  (+8 more)
(+10 files in other folders)
