[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brigade-cli"
version = "0.5.0"
description = "Run your agent brigade: an operator-system CLI that bootstraps, checks, and operates agent workspaces across harnesses."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Solomon Neas", email = "srneas@gmail.com" }]
keywords = ["agents", "openclaw", "claude-code", "codex", "memory", "bootstrap", "brigade", "operator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/escoffier-labs/brigade"
Cookbook = "https://github.com/solomonneas/solos-cookbook"
Issues = "https://github.com/escoffier-labs/brigade/issues"

[project.scripts]
brigade = "brigade.cli:main"
solo-mise = "brigade.cli:main_deprecated"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
brigade = ["py.typed", "templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
